import UIKit
struct AccessibilityIdentifiers {
    
    //MARK: WebView
    struct WebView {
        static let webView = "WebViewViewController"
        
    }
    
    struct ImageListCell {
        static let imagesListCell = "ImagesListCell"
        static let likeButton = "likeButton"
        
    }
    
    struct ImagesListViewController{
        static let showSingleImage = "ShowSingleImage"
        static let imagesListViewController = "ImagesList"
        
    }
    
    struct ProfileView {
        static let usernameLabel = "userName.name"
        static let accountLabel = "loginName"
        static let logoutButton = "logoutButton"
        static let ProfileViewControllerIdentifier = "ProfileViewController"
    }
    
    struct AuthViewController {
        static let authViewController = "AuthViewController"
    }
    
    struct TabBarController {
        static let tabBarController = "TabBarController"
    }
    
    
}
