...
        isAvatarLoaded = false
    }
    
    // MARK: - Public Methods
    func showLogoutConfirmation() {
        let alert = UIAlertController(
            title: "Пока, Пока!",
            message: "Уверены, что хотите выйти?",
            preferredStyle: .alert
        )
        
        alert.addAction(UIAlertAction(title: "Нет", style: .cancel))
        alert.addAction(UIAlertAction(title: "Да", style: .default) { [weak self] _ in
            self?.presenter?.didConfirmLogout()
        })
        
        present(alert, animated: true)
    }
    
...
