...
                        <subviews>
                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="LogoUnsplash_icon" translatesAutoresizingMaskIntoConstraints="NO" id="rbS-tX-Jyx" userLabel="Logo">
                                <rect key="frame" x="166.66666666666666" y="396" width="60" height="60"/>
                            </imageView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ffl-b7-iht" userLabel="LoginButton">
                                <rect key="frame" x="16" y="646" width="361" height="48"/>
                                <accessibility key="accessibilityConfiguration" identifier="Authenticate"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="48" id="ijK-S6-RZg"/>
                                </constraints>
                                <color key="tintColor" name="IF_White"/>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="filled" title="Войти">
...
